revert port forwarding setting of nimbus and ui

--- a/docker-storm.yml
+++ b/docker-storm.yml
@@ -1,15 +1,15 @@
 nimbus:
   command: --daemon nimbus drpc
-  build: .
-  expose:
-    - "3773"
-    - "3772"
-    - "6627"
+  image: fhuz/docker-storm
+  ports:
+    - "3773:3773"
+    - "3772:3772"
+    - "6627:6627"
   external_links:
     - storm_zookeeper_1:zk
 supervisor:
   command: --daemon supervisor logviewer
-  build: .
+  image: fhuz/docker-storm
   expose:
     - "8000"
     - "6700"
@@ -22,9 +22,9 @@ supervisor:
     - storm_zookeeper_1:zk
 ui:
   command: --daemon ui
-  build: .
-  expose:
-    - "8080"
+  image: fhuz/docker-storm
+  ports:
+    - "8080:8080"
   links:
     - nimbus:nimbus
   external_links:
